compiler/testData/diagnostics/tests/redeclarations/ConflictingExtensionProperties.kt
package foo

val Int.<!REDECLARATION!>foo<!> = 2
val Int.<!REDECLARATION!>foo<!> = 3
